# CordStone

./: CMakeLists.txt  README.md
.github/workflows/: cmake-compile.yml
src/: cordstone.cpp  cordstone.h
src/discord/: discord.cpp  discord.h  message_type.hpp
src/json/: json_loader.cpp  json_loader.h
src/minecraft/: image_uploader.cpp  image_uploader.h
